Create notifications for each arriving email. Consume then when respective messages are read.
Also support unknown contacts (insert them on DB when the sender is
not in the contacts pristine DB).

Change-Id: If7e76afe2e6f9017cc529076480f3c0709bd71d7
Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/email-core/CMakeLists.txt
+++ b/email-core/CMakeLists.txt
@@ -158,6 +158,7 @@ SET(CORE-SRCS
 	${CMAKE_SOURCE_DIR}/email-core/email-core-tasks.c
 	${CMAKE_SOURCE_DIR}/email-core/email-core-signal.c
 	${CMAKE_SOURCE_DIR}/email-core/email-core-alarm.c
+    ${CMAKE_SOURCE_DIR}/email-core/email-core-notification.c
 )
 
 INCLUDE_DIRECTORIES(
