--- a/email-api/CMakeLists.txt
+++ b/email-api/CMakeLists.txt
@@ -60,7 +60,7 @@ TARGET_LINK_LIBRARIES(${API-LIB} ${api_pkgs_LDFLAGS} email-ipc email-storage ema
 SET_TARGET_PROPERTIES(${API-LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
 SET_TARGET_PROPERTIES(${API-LIB} PROPERTIES VERSION ${VERSION})
 
-INSTALL(TARGETS ${API-LIB} DESTINATION lib COMPONENT RuntimeLibraries)
+INSTALL(TARGETS ${API-LIB} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
 
 SET(EMAIL-API-HEADERS
 	${CMAKE_SOURCE_DIR}/email-api/include/email-api.h
