Add TEST_APP_SUPPORT macro
Change-Id: Iadc93ad81213edbfc054d81171974bc91dc44b72
Signed-off-by: Sabera Djelti (sdi2) <sabera.djelti@open.eurogiciel.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,9 @@ ADD_SUBDIRECTORY(email-daemon)
 ##########################################################
 # Define Test App
 ##########################################################
-
-ADD_SUBDIRECTORY(utilities)
-
+IF (TEST_APP_SUPPORT)
+	ADD_SUBDIRECTORY(utilities)
+ENDIF (TEST_APP_SUPPORT)
 ##########################################################
 # Define Install Files
 ##########################################################
