--- a/email-core/CMakeLists.txt
+++ b/email-core/CMakeLists.txt
@@ -173,7 +173,7 @@ TARGET_LINK_LIBRARIES(${CORE-SOUND-LIB} ${core_sound_pkgs_LDFLAGS} ${STORAGE-LIB
 SET_TARGET_PROPERTIES(${CORE-SOUND-LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
 SET_TARGET_PROPERTIES(${CORE-SOUND-LIB} PROPERTIES VERSION ${VERSION})
 
-INSTALL(TARGETS ${CORE-SOUND-LIB} DESTINATION lib COMPONENT RuntimeLibraries)
+INSTALL(TARGETS ${CORE-SOUND-LIB} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
 
 ##########################################################
 # Define Core lib
