Apply the cynara
Change-Id: I05c51927898fe2aaf72fa97c658d2694e0af354f

--- a/email-core/CMakeLists.txt
+++ b/email-core/CMakeLists.txt
@@ -169,34 +169,34 @@ INSTALL(TARGETS ${CONTAINER-LIB} DESTINATION ${LIB_INSTALL_DIR} COMPONENT Runtim
 # Define cynara lib                                                  
 ##########################################################
 
-#SET(CYNARA-LIB "email-cynara")
-#SET(CYNARA-SRCS 
-#    ${CMAKE_SOURCE_DIR}/email-core/email-core-cynara.c
-#)
+SET(CYNARA-LIB "email-cynara")
+SET(CYNARA-SRCS 
+    ${CMAKE_SOURCE_DIR}/email-core/email-core-cynara.c
+)
 
-#INCLUDE_DIRECTORIES(
-#	${CMAKE_SOURCE_DIR}/email-common-use/include
-#)
+INCLUDE_DIRECTORIES(
+	${CMAKE_SOURCE_DIR}/email-common-use/include
+)
 
-#INCLUDE(FindPkgConfig)
-#SET(PKG_MODULES cynara-client cynara-creds-socket)
+INCLUDE(FindPkgConfig)
+SET(PKG_MODULES cynara-client cynara-creds-socket cynara-session)
 
-#pkg_check_modules(cynara_pkgs REQUIRED ${PKG_MODULES})
+pkg_check_modules(cynara_pkgs REQUIRED ${PKG_MODULES})
 
-#FOREACH(flag ${cynara_pkgs_CFLAGS})
-#	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
-#ENDFOREACH(flag)
+FOREACH(flag ${cynara_pkgs_CFLAGS})
+	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
+ENDFOREACH(flag)
 
-#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
 
-#SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")
+SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")
 
-#ADD_LIBRARY(${CYNARA-LIB} SHARED ${CYNARA-SRCS})
-#TARGET_LINK_LIBRARIES(${CYNARA-LIB} ${cynara_pkgs_LDFLAGS} dl)
-#SET_TARGET_PROPERTIES(${CYNARA-LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
-#SET_TARGET_PROPERTIES(${CYNARA-LIB} PROPERTIES VERSION ${VERSION})
+ADD_LIBRARY(${CYNARA-LIB} SHARED ${CYNARA-SRCS})
+TARGET_LINK_LIBRARIES(${CYNARA-LIB} ${cynara_pkgs_LDFLAGS} dl)
+SET_TARGET_PROPERTIES(${CYNARA-LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
+SET_TARGET_PROPERTIES(${CYNARA-LIB} PROPERTIES VERSION ${VERSION})
 
-#INSTALL(TARGETS ${CYNARA-LIB} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
+INSTALL(TARGETS ${CYNARA-LIB} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
 
 ##########################################################
 # Define Core lib
@@ -273,9 +273,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")
 
 ADD_LIBRARY(${CORE-LIB} SHARED ${CORE-SRCS})
 
-TARGET_LINK_LIBRARIES(${CORE-LIB} ${core_pkgs_LDFLAGS} ${STORAGE-LIB} ${NETWORK-LIB} ${DEVICE-LIB} ${CONTAINER-LIB})
-
-#TARGET_LINK_LIBRARIES(${CORE-LIB} ${core_pkgs_LDFLAGS} ${STORAGE-LIB} ${NETWORK-LIB} ${DEVICE-LIB} ${CONTAINER-LIB} ${CYNARA-LIB})
+TARGET_LINK_LIBRARIES(${CORE-LIB} ${core_pkgs_LDFLAGS} ${STORAGE-LIB} ${NETWORK-LIB} ${DEVICE-LIB} ${CONTAINER-LIB} ${CYNARA-LIB})
 
 SET_TARGET_PROPERTIES(${CORE-LIB} PROPERTIES SOVERSION ${VERSION_MAJOR})
 SET_TARGET_PROPERTIES(${CORE-LIB} PROPERTIES VERSION ${VERSION})
