Fixed the bug for initialize
Change-Id: I8dadd29119be9917725956f0794ac782a9c31e45

--- a/packaging/email.service
+++ b/packaging/email.service
@@ -9,5 +9,5 @@ OOMScoreAdjust=100
 MemoryLimit=30M
 
 [Install]
-WantedBy=tizen-middleware.target
+WantedBy=multi-user.target
 EnvironmentFile=/run/tizen-mobile-ui
