Modified the indent
Change-Id: I58375a94142bfd49e168fa9f50fd240353fd5fab

--- a/email-core/CMakeLists.txt
+++ b/email-core/CMakeLists.txt
@@ -234,7 +234,7 @@ INCLUDE_DIRECTORIES(
 INCLUDE(FindPkgConfig)
 SET(PKG_MODULES glib-2.0 dlog dbus-1 gthread-2.0 key-manager
 			uw-imap-toolkit vconf vconf-internal-keys contacts-service2 
-			openssl accounts-svc alarm-service notification libcurl libxml-2.0 feedback
+			openssl accounts-svc alarm-service notification libcurl libxml-2.0 
 			cert-svc cert-svc-vcore badge capi-appfw-application icu-i18n gmime-2.6 storage)
 
 pkg_check_modules(core_pkgs REQUIRED ${PKG_MODULES})
