--- a/email-core/CMakeLists.txt
+++ b/email-core/CMakeLists.txt
@@ -235,7 +235,7 @@ INCLUDE(FindPkgConfig)
 SET(PKG_MODULES glib-2.0 dlog dbus-1 gthread-2.0 key-manager
 			uw-imap-toolkit vconf vconf-internal-keys contacts-service2 
 			openssl accounts-svc alarm-service notification libcurl libxml-2.0 
-			cert-svc cert-svc-vcore badge capi-appfw-application icu-i18n gmime-2.6 storage)
+			cert-svc-vcore badge capi-appfw-application icu-i18n gmime-2.6 storage)
 
 pkg_check_modules(core_pkgs REQUIRED ${PKG_MODULES})
 
@@ -293,7 +293,7 @@ INCLUDE_DIRECTORIES(
 
 
 INCLUDE(FindPkgConfig)
-pkg_check_modules(smime_pkgs REQUIRED glib-2.0 dlog cert-svc cert-svc-vcore)
+pkg_check_modules(smime_pkgs REQUIRED glib-2.0 dlog cert-svc-vcore)
 
 set(EXTRA_CFLAGS "")
 FOREACH(flag ${smime_pkgs_CFLAGS})
